--- a/SpringWork2020G1/docker/docker-compose.yml
+++ b/SpringWork2020G1/docker/docker-compose.yml
@@ -29,7 +29,7 @@ services:
         command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
         environment:
             TZ: "Asia/Tokyo"
-            MYSQL_DATABASE: db
+            MYSQL_DATABASE: mst_todo
             MYSQL_USER: test
             MYSQL_PASSWORD: test
             MYSQL_ROOT_PASSWORD: root
