--- a/SpringWork2020G1/docker/mysql/Dockerfile
+++ b/SpringWork2020G1/docker/mysql/Dockerfile
@@ -1,1 +1,6 @@
 FROM mysql:8
+
+RUN apt-get update \
+    && apt-get install -y locales \
+    && locale-gen ja_JP.UTF-8 \
+    && echo "export LANG=ja_JP.UTF-8" >> ~/.bashrc
