--- a/SpringWork2020G1/docker/docker-compose.yml
+++ b/SpringWork2020G1/docker/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         environment:
             DRIVER_URL: jdbc:mysql://springwork_20g1_db:3306/db?useUnicode=true&characterEncoding=UTF-8&useSSL=false
         ports: # 2020年度グループ1
-            - "8201:8080" # ポート8201番の開放
+            - "8080:8080" # ポート8080番の開放
         privileged: true
         tty: true
         command: wait-for-it.sh springwork_20g1_db:3306 --timeout=30 -- ./gradlew tomcatRun
@@ -29,7 +29,7 @@ services:
         command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
         environment:
             TZ: "Asia/Tokyo"
-            MYSQL_DATABASE: mst_todo
+            MYSQL_DATABASE: db
             MYSQL_USER: test
             MYSQL_PASSWORD: test
             MYSQL_ROOT_PASSWORD: root
