--- a/SpringWork2020G1/docker/docker-compose.yml
+++ b/SpringWork2020G1/docker/docker-compose.yml
@@ -24,6 +24,8 @@ services:
         build:
             context: ../.
             dockerfile: ./docker/mysql/Dockerfile
+        expose:
+            - "3306"
         ports:
             - "9201:3306"
         command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
