--- a/SpringWork2020G1/docker/docker-compose.yml
+++ b/SpringWork2020G1/docker/docker-compose.yml
@@ -7,14 +7,14 @@ services:
             dockerfile: ./docker/gradle/Dockerfile # Dockerfileをビルド
         working_dir: /app
         volumes:
-            - ../app:/app:cached
+            - "../app:/app"
         environment:
             DRIVER_URL: jdbc:mysql://springwork_20g1_db:3306/db?useUnicode=true&characterEncoding=UTF-8&useSSL=false
         ports: # 2020年度グループ1
             - "8080:8080" # ポート8080番の開放
         privileged: true
         tty: true
-        command: wait-for-it.sh springwork_20g1_db:3306 --timeout=30 -- ./gradlew tomcatRun
+        command: bash -c "sed -i 's/\r//' ./gradlew && bash ./gradlew tomcatRun"
         networks:
             - springwork2020g1-network
 
