--- a/SpringWork2020G1/app/build.gradle
+++ b/SpringWork2020G1/app/build.gradle
@@ -7,6 +7,8 @@ buildscript {
     dependencies {
         classpath group: 'com.bmuschko', name: 'gradle-tomcat-plugin', version: '2.5'
         classpath "mysql:mysql-connector-java:8.0.15"
+        classpath group: 'org.springframework.security', name: 'spring-security-crypto', version: '3.1.0.RELEASE'
+
     }
 }
 
@@ -57,6 +59,9 @@ dependencies {
     implementation('com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.5')
     implementation('com.fasterxml.jackson.core:jackson-core:2.8.5')
     implementation('com.fasterxml.jackson.core:jackson-databind:2.8.5')
+
+    //security
+    compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.1.1.RELEASE'
     
 }
 
