--- a/SpringWork2020G1/docker/prod/mysql/Dockerfile
+++ b/SpringWork2020G1/docker/prod/mysql/Dockerfile
@@ -9,7 +9,7 @@ ENV LANGUAGE ja_JP:ja
 ENV LC_ALL=ja_JP.UTF-8
 RUN localedef -f UTF-8 -i ja_JP ja_JP.utf8
 # ユーザー名とパスワードの環境変数
-ENV MYSQL_DATABASE db
+ENV MYSQL_DATABASE mst_todo
 ENV MYSQL_USER test
 ENV MYSQL_PASSWORD test
 ENV MYSQL_ROOT_PASSWORD root
